test/example/itself/definition.ebnf
EBNF       ::=  EBNFL "." { EBNFL "." }.
EBNFL      ::=  Head "::=" Body { "|" Body }.
Head       ::=  Variable.
Body       ::=  Element { "|" Element }.
Element    ::=  Terminal | Variable | "{" ElementOpt "}" | "[" ElementOpt "]".
ElementOpt ::=  Terminal ElementOpt | Variable { Element }.
Variable   ::=  @CAPITAL [ AlphaNums ].
Terminal   ::=  "\"" String "\"".
AlphaNums  ::=  @ALPHANUM { @ALPHANUM }.
String     ::=  @PRINTABLE { @PRINTABLE }.
